--- a/WpfMap/Resources/Templates.xaml
+++ b/WpfMap/Resources/Templates.xaml
@@ -42,4 +42,10 @@
             </Trigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
+    <ControlTemplate x:Key="ValidationTemplate">
+        <DockPanel>
+            <TextBlock Foreground="Red" FontSize="20">!</TextBlock>
+            <AdornedElementPlaceholder/>
+        </DockPanel>
+    </ControlTemplate>
 </ResourceDictionary>
