--- a/WpfMap/Views/Admin/ResidentManager.xaml
+++ b/WpfMap/Views/Admin/ResidentManager.xaml
@@ -72,7 +72,7 @@
             </Grid.ColumnDefinitions>
             <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="Edit/Delete Resident" HorizontalContentAlignment="Center" FontSize="18" FontWeight="Bold" Margin="0,10"/>
             <Label Grid.Row="1" Grid.Column="0" Content="Select Resident: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <ComboBox Name="residentSelector" ItemsSource="{Binding Residents}" DisplayMemberPath="Name" SelectionChanged="ResidentSelector_SelectionChanged" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0"/>
+            <TextBox Name="residentUID" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0"/>
             <Label Grid.Row="3" Grid.Column="0" Content="Name: " FontWeight="Medium" Margin="20,0,0,0"/>
             <TextBox Name="editResidentName" Grid.Row="3" Grid.Column="1" Margin="0,0,20,0"/>
             <Label Grid.Row="5" Grid.Column="0" Content="Age: " FontWeight="Medium" Margin="20,0,0,0"/>
