--- a/WpfMap/Views/Common/Registration.xaml
+++ b/WpfMap/Views/Common/Registration.xaml
@@ -6,6 +6,15 @@
         xmlns:local="clr-namespace:WpfMap"
         mc:Ignorable="d"
         Title="Registration" Height="320" Width="480">
+    <Window.Resources>
+        <Style x:Key="ButtonWithAgreement" TargetType="Button">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding ElementName=Agreement, Path=IsChecked}" Value="False">
+                    <Setter Property="IsEnabled" Value="False"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
     <Grid x:Name="LayoutRoot">
         <Grid.Background>
             <ImageBrush ImageSource="D:/profiles/mountains-3.jpg" Stretch="UniformToFill"/>
@@ -29,7 +38,10 @@
             <Label Content="Registration" Grid.ColumnSpan="2" FontWeight="Bold" FontSize="24" FontFamily="Rockwell" HorizontalAlignment="Center" Foreground="White"/>
             <TextBox Name="login" Width="150" Text="Your Login" HorizontalContentAlignment="Center" Margin="0,20,0,0"/>
             <PasswordBox Name="password" Width="150" HorizontalContentAlignment="Center" Margin="0,20,0,0"/>
-            <Button Click="Register_Click" Content="Register" Width="150" HorizontalContentAlignment="Center" Margin="0,20,0,0"/>
+            <CheckBox Name="Agreement" FlowDirection="RightToLeft" HorizontalAlignment="Center" Margin="0,20,0,0">
+                <TextBlock FlowDirection="LeftToRight" Foreground="White" FontWeight="Bold" FontSize="10" Text="I agree with terms of usage "/>
+            </CheckBox>
+            <Button Click="Register_Click" Content="Register" Width="150" HorizontalContentAlignment="Center" Margin="0,20,0,0" Style="{StaticResource ButtonWithAgreement}"/>
         </StackPanel>
     </Grid>
 </Window>
