--- a/WpfMap/Views/User/ResidentPage.xaml
+++ b/WpfMap/Views/User/ResidentPage.xaml
@@ -17,12 +17,12 @@
             <StackPanel Grid.Row="3" Grid.Column="0" Margin="10, 15">
                 <Label Content="Resident Info" Style="{StaticResource InfoHeaderStyle}"/>
                 <ListView Background="White" Height="170">
-                    <Label Name="residentName" Content="{Binding Path=Name}" ContentStringFormat="Name: {0}" Style="{StaticResource InfoElementStyle}"/>
-                    <Label Name="residentUID" Content="{Binding Path=UID}" ContentStringFormat="UID: {0}" Style="{StaticResource InfoElementStyle}"/>
-                    <Label Name="residentAge" Content="{Binding Path=Age}" ContentStringFormat="Age: {0}" Style="{StaticResource InfoElementStyle}"/>
-                    <Label Name="residentGender" Content="{Binding Path=Gender}" ContentStringFormat="Gender: {0}" Style="{StaticResource InfoElementStyle}"/>
-                    <Label Name="residentPhone" Content="{Binding Path=Phone}" ContentStringFormat="Phone: {0}" Style="{StaticResource InfoElementStyle}"/>
-                    <Label Name="residentResidenceTime" Content="{Binding Path=ResidenceTime}" ContentStringFormat="Residence time: {0} year" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="residentName" Content="{Binding Path=Resident.Name}" ContentStringFormat="Name: {0}" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="residentUID" Content="{Binding Path=Resident.UID}" ContentStringFormat="UID: {0}" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="residentAge" Content="{Binding Path=Resident.Age}" ContentStringFormat="Age: {0}" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="residentGender" Content="{Binding Path=Resident.Gender}" ContentStringFormat="Gender: {0}" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="residentPhone" Content="{Binding Path=Resident.Phone}" ContentStringFormat="Phone: {0}" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="residentResidenceTime" Content="{Binding Path=Resident.ResidenceTime}" ContentStringFormat="Residence time: {0} year" Style="{StaticResource InfoElementStyle}"/>
                 </ListView>
             </StackPanel>
         </Grid>
