--- a/WpfMap/Resources/Templates.xaml
+++ b/WpfMap/Resources/Templates.xaml
@@ -42,10 +42,14 @@
             </Trigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
-    <ControlTemplate x:Key="ValidationTemplate">
-        <DockPanel>
-            <TextBlock Foreground="Red" FontSize="20">!</TextBlock>
-            <AdornedElementPlaceholder/>
-        </DockPanel>
+    <ControlTemplate x:Key="ErrorTemplate">
+        <StackPanel>
+            <Border>
+                <AdornedElementPlaceholder/>
+            </Border>
+            <Border Background="OrangeRed" BorderThickness="2">
+                <TextBlock Foreground="Red" Background="White" FontSize="10" Text="{Binding [0].ErrorContent}" HorizontalAlignment="Stretch"/>
+            </Border>
+        </StackPanel>
     </ControlTemplate>
 </ResourceDictionary>
