--- a/WpfMap/Views/Admin/CityManager.xaml
+++ b/WpfMap/Views/Admin/CityManager.xaml
@@ -2,10 +2,46 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfMap"
         mc:Ignorable="d"
         Title="CityManager" Height="500" Width="640">
+    <Window.Resources>
+        <Style x:Key="AddButtonStyle" TargetType="Button">
+            <Setter Property="IsEnabled" Value="true" />
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding ElementName=addCityName, Path=(Validation.HasError)}" Value="true">
+                    <Setter Property="IsEnabled" Value="false" />
+                </DataTrigger>
+                <DataTrigger Binding="{Binding ElementName=addCityArea, Path=(Validation.HasError)}" Value="true">
+                    <Setter Property="IsEnabled" Value="false" />
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+        <Style x:Key="EditDeleteButtonStyle" TargetType="Button">
+            <Setter Property="IsEnabled" Value="true" />
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Path=SelectedItem, ElementName=citySelector}" Value="{x:Null}">
+                    <Setter Property="IsEnabled" Value="false" />
+                </DataTrigger>
+                <DataTrigger Binding="{Binding ElementName=editCityName, Path=(Validation.HasError)}" Value="true">
+                    <Setter Property="IsEnabled" Value="false" />
+                </DataTrigger>
+                <DataTrigger Binding="{Binding ElementName=editCityArea, Path=(Validation.HasError)}" Value="true">
+                    <Setter Property="IsEnabled" Value="false" />
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+        <Style x:Key="OpenManagerButtonStyle" TargetType="Button">
+            <Setter Property="IsEnabled" Value="true" />
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Path=SelectedItem, ElementName=citySelector}" Value="{x:Null}">
+                    <Setter Property="IsEnabled" Value="false" />
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
     <Grid x:Name="LayoutRoot" Background="AliceBlue">
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -29,10 +65,10 @@
             </Grid.ColumnDefinitions>
             <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="Add City" Style="{StaticResource BoldLabelStyle}" Margin="0,10"/>
             <Label Grid.Row="1" Grid.Column="0" Content="Name: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <TextBox Name="addCityName" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0"/>
+            <TextBox Name="addCityName" Text="{Binding AddCityName, ValidatesOnExceptions=True, UpdateSourceTrigger=PropertyChanged}" Validation.ErrorTemplate="{StaticResource ErrorTemplate}" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0"/>
             <Label Grid.Row="3" Grid.Column="0" Content="Area: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <TextBox Name="addCityArea" Grid.Row="3" Grid.Column="1" Margin="0,0,20,0"/>
-            <Button Click="AddCity_Click" Grid.Row="5" Grid.Column="1" Content="Add" Margin="0,0,20,0"/>
+            <TextBox Name="addCityArea" Text="{Binding AddCityArea, ValidatesOnExceptions=True, UpdateSourceTrigger=PropertyChanged}" Validation.ErrorTemplate="{StaticResource ErrorTemplate}" Grid.Row="3" Grid.Column="1" Margin="0,0,20,0"/>
+            <Button Command="{Binding AddCityCommand}" Grid.Row="5" Grid.Column="1" Content="Add" Margin="0,0,20,0" Style="{StaticResource AddButtonStyle}"/>
         </Grid>
         <Grid Grid.Row="0" Grid.Column="1">
             <Grid.RowDefinitions>
@@ -55,14 +91,20 @@
             </Grid.ColumnDefinitions>
             <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="Edit/Delete City" HorizontalContentAlignment="Center" FontSize="18" FontWeight="Bold" Margin="0,10"/>
             <Label Grid.Row="1" Grid.Column="0" Content="Select City: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <ComboBox Name="citySelector" ItemsSource="{Binding Cities}" DisplayMemberPath="Name" SelectionChanged="CitySelector_SelectionChanged" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0"/>
+            <ComboBox Name="citySelector" ItemsSource="{Binding Cities, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding SelectedCity, UpdateSourceTrigger=PropertyChanged}" IsSynchronizedWithCurrentItem="True" DisplayMemberPath="Name" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="SelectionChanged">
+                        <i:InvokeCommandAction Command="{Binding SelectCityCommand}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </ComboBox>
             <Label Grid.Row="3" Grid.Column="0" Content="Name: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <TextBox Name="editCityName" Grid.Row="3" Grid.Column="1" Margin="0,0,20,0"/>
+            <TextBox Name="editCityName" Text="{Binding EditCityName, ValidatesOnExceptions=True, UpdateSourceTrigger=PropertyChanged}" Validation.ErrorTemplate="{StaticResource ErrorTemplate}" Grid.Row="3" Grid.Column="1" Margin="0,0,20,0"/>
             <Label Grid.Row="5" Grid.Column="0" Content="Area: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <TextBox Name="editCityArea" Grid.Row="5" Grid.Column="1" Margin="0,0,20,0"/>
-            <Button Click="EditCity_Click" Grid.Row="7" Grid.Column="1" Content="Edit" Margin="0,0,20,0"/>
-            <Button Click="DeleteCity_Click" Grid.Row="9" Grid.Column="1" Content="Delete" Margin="0,0,20,0"/>
-            <Button Click="OpenStreetManager_Click" Grid.Row="11" Grid.Column="1" Content="Open Street Manager" Margin="0,0,20,0"/>
+            <TextBox Name="editCityArea" Text="{Binding EditCityArea, ValidatesOnExceptions=True, UpdateSourceTrigger=PropertyChanged}" Validation.ErrorTemplate="{StaticResource ErrorTemplate}" Grid.Row="5" Grid.Column="1" Margin="0,0,20,0"/>
+            <Button Command="{Binding EditCityCommand}" Grid.Row="7" Grid.Column="1" Content="Edit" Margin="0,0,20,0" Style="{StaticResource EditDeleteButtonStyle}"/>
+            <Button Command="{Binding DeleteCityCommand}" Grid.Row="9" Grid.Column="1" Content="Delete" Margin="0,0,20,0" Style="{StaticResource EditDeleteButtonStyle}"/>
+            <Button Command="{Binding OpenStreetManagerCommand}" Grid.Row="11" Grid.Column="1" Content="Open Street Manager" Margin="0,0,20,0" Style="{StaticResource OpenManagerButtonStyle}"/>
         </Grid>
     </Grid>
 </Window>
