--- a/WpfMap/Views/Admin/CountryManager.xaml
+++ b/WpfMap/Views/Admin/CountryManager.xaml
@@ -2,10 +2,43 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfMap"
         mc:Ignorable="d"
         Title="CountryManager" Height="500" Width="640">
+    <Window.Resources>
+        <Style x:Key="AddButtonStyle" TargetType="Button">
+            <Setter Property="IsEnabled" Value="true" />
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding ElementName=addCountryName, Path=(Validation.HasError)}" Value="true">
+                    <Setter Property="IsEnabled" Value="false" />
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+        <Style x:Key="EditDeleteButtonStyle" TargetType="Button">
+            <Setter Property="IsEnabled" Value="true" />
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Path=SelectedItem, ElementName=countrySelector}" Value="{x:Null}">
+                    <Setter Property="IsEnabled" Value="false" />
+                </DataTrigger>
+                <DataTrigger Binding="{Binding Path=SelectedItem, ElementName=editCountryCapital}" Value="{x:Null}">
+                    <Setter Property="IsEnabled" Value="false" />
+                </DataTrigger>
+                <DataTrigger Binding="{Binding ElementName=editCountryName, Path=(Validation.HasError)}" Value="true">
+                    <Setter Property="IsEnabled" Value="false" />
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+        <Style x:Key="OpenManagerButtonStyle" TargetType="Button">
+            <Setter Property="IsEnabled" Value="true" />
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Path=SelectedItem, ElementName=countrySelector}" Value="{x:Null}">
+                    <Setter Property="IsEnabled" Value="false" />
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
     <Grid x:Name="LayoutRoot" Background="AliceBlue">
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -27,8 +60,8 @@
             </Grid.ColumnDefinitions>
             <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="Add Country" HorizontalContentAlignment="Center" FontSize="18" FontWeight="Bold" Margin="0,10"/>
             <Label Grid.Row="1" Grid.Column="0" Content="Name: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <TextBox Name="addCountryName" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0"/>
-            <Button Click="AddCountry_Click" Grid.Row="5" Grid.Column="1" Content="Add" Margin="0,0,20,0"/>
+            <TextBox Name="addCountryName" Text="{Binding AddCountryName, ValidatesOnExceptions=True, UpdateSourceTrigger=PropertyChanged}" Validation.ErrorTemplate="{StaticResource ErrorTemplate}" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0"/>
+            <Button Command="{Binding AddCountryCommand}" Grid.Row="5" Grid.Column="1" Content="Add" Margin="0,0,20,0" Style="{StaticResource AddButtonStyle}"/>
         </Grid>
         <Grid Grid.Row="0" Grid.Column="1">
             <Grid.RowDefinitions>
@@ -51,14 +84,20 @@
             </Grid.ColumnDefinitions>
             <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="Edit/Delete Country" HorizontalContentAlignment="Center" FontSize="18" FontWeight="Bold" Margin="0,10"/>
             <Label Grid.Row="1" Grid.Column="0" Content="Select Country: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <ComboBox Name="countrySelector" ItemsSource="{Binding Countries}" DisplayMemberPath="Name" SelectionChanged="CountrySelector_SelectionChanged" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0"/>
+            <ComboBox Name="countrySelector" ItemsSource="{Binding Countries, ValidatesOnExceptions=True, UpdateSourceTrigger=PropertyChanged}" Validation.ErrorTemplate="{StaticResource ErrorTemplate}" SelectedItem="{Binding SelectedCountry, UpdateSourceTrigger=PropertyChanged}" IsSynchronizedWithCurrentItem="True" DisplayMemberPath="Name" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="SelectionChanged">
+                        <i:InvokeCommandAction Command="{Binding SelectCountryCommand}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </ComboBox>
             <Label Grid.Row="3" Grid.Column="0" Content="Name: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <TextBox Name="editCountryName" Grid.Row="3" Grid.Column="1" Margin="0,0,20,0"/>
+            <TextBox Name="editCountryName" Text="{Binding EditCountryName, ValidatesOnExceptions=True, UpdateSourceTrigger=PropertyChanged}" Validation.ErrorTemplate="{StaticResource ErrorTemplate}" Grid.Row="3" Grid.Column="1" Margin="0,0,20,0"/>
             <Label Grid.Row="5" Grid.Column="0" Content="Capital: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <ComboBox Name="editCapital" Grid.Row="5" Grid.Column="1" Margin="0,0,20,0" DisplayMemberPath="Name"/>
-            <Button Click="EditCountry_Click" Grid.Row="7" Grid.Column="1" Content="Edit" Margin="0,0,20,0"/>
-            <Button Click="DeleteCountry_Click"  Grid.Row="9" Grid.Column="1" Content="Delete" Margin="0,0,20,0"/>
-            <Button Click="OpenCityManager_Click" Grid.Row="11" Grid.Column="1" Content="Open City Manager" Margin="0,0,20,0"/>
+            <ComboBox Name="editCountryCapital" ItemsSource="{Binding SelectedCountry.Cities, ValidatesOnExceptions=True, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding EditCountryCapital, UpdateSourceTrigger=PropertyChanged}" Validation.ErrorTemplate="{StaticResource ErrorTemplate}" Grid.Row="5" Grid.Column="1" Margin="0,0,20,0" DisplayMemberPath="Name"/>
+            <Button Command="{Binding EditCountryCommand}" Grid.Row="7" Grid.Column="1" Content="Edit" Margin="0,0,20,0" Style="{StaticResource EditDeleteButtonStyle}"/>
+            <Button Command="{Binding DeleteCountryCommand}"  Grid.Row="9" Grid.Column="1" Content="Delete" Margin="0,0,20,0" Style="{StaticResource EditDeleteButtonStyle}"/>
+            <Button Command="{Binding OpenCityManagerCommand}" Grid.Row="11" Grid.Column="1" Content="Open City Manager" Margin="0,0,20,0" Style="{StaticResource OpenManagerButtonStyle}"/>
         </Grid>
     </Grid>
 </Window>
