--- a/WpfMap/Views/Admin/HouseManager.xaml
+++ b/WpfMap/Views/Admin/HouseManager.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfMap"
         mc:Ignorable="d"
@@ -27,8 +28,8 @@
             </Grid.ColumnDefinitions>
             <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="Add House" HorizontalContentAlignment="Center" FontSize="18" FontWeight="Bold" Margin="0,10"/>
             <Label Grid.Row="1" Grid.Column="0" Content="Address: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <TextBox Name="addHouseAddress" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0"/>
-            <Button Click="AddHouse_Click" Grid.Row="3" Grid.Column="1" Content="Add" Margin="0,0,20,0"/>
+            <TextBox Name="addHouseAddress" Text="{Binding AddHouseAddress, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0"/>
+            <Button Command="{Binding AddHouseCommand}" Grid.Row="3" Grid.Column="1" Content="Add" Margin="0,0,20,0"/>
         </Grid>
         <Grid Grid.Row="0" Grid.Column="1">
             <Grid.RowDefinitions>
@@ -49,12 +50,18 @@
             </Grid.ColumnDefinitions>
             <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="Edit/Delete House" HorizontalContentAlignment="Center" FontSize="18" FontWeight="Bold" Margin="0,10"/>
             <Label Grid.Row="1" Grid.Column="0" Content="Select House: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <ComboBox Name="houseSelector" ItemsSource="{Binding Houses}" DisplayMemberPath="Address" SelectionChanged="HouseSelector_SelectionChanged" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0"/>
+            <ComboBox Name="houseSelector" ItemsSource="{Binding Houses, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding SelectedHouse, UpdateSourceTrigger=PropertyChanged}" IsSynchronizedWithCurrentItem="True" DisplayMemberPath="Address" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="SelectionChanged">
+                        <i:InvokeCommandAction Command="{Binding SelectHouseCommand}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </ComboBox>
             <Label Grid.Row="3" Grid.Column="0" Content="Address: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <TextBox Name="editHouseAddress" Grid.Row="3" Grid.Column="1" Margin="0,0,20,0"/>
-            <Button Click="EditHouse_Click" Grid.Row="5" Grid.Column="1" Content="Edit" Margin="0,0,20,0"/>
-            <Button Click="DeleteHouse_Click" Grid.Row="7" Grid.Column="1" Content="Delete" Margin="0,0,20,0"/>
-            <Button Click="OpenRoomManager_Click" Grid.Row="9" Grid.Column="1" Content="Open Room Manager" Margin="0,0,20,0"/>
+            <TextBox Name="editHouseAddress" Text="{Binding EditHouseAddress, UpdateSourceTrigger=PropertyChanged}" Grid.Row="3" Grid.Column="1" Margin="0,0,20,0"/>
+            <Button Command="{Binding EditHouseCommand}" Grid.Row="5" Grid.Column="1" Content="Edit" Margin="0,0,20,0"/>
+            <Button Command="{Binding DeleteHouseCommand}" Grid.Row="7" Grid.Column="1" Content="Delete" Margin="0,0,20,0"/>
+            <Button Command="{Binding OpenRoomManagerCommand}" Grid.Row="9" Grid.Column="1" Content="Open Room Manager" Margin="0,0,20,0"/>
         </Grid>
     </Grid>
 </Window>
