--- a/WpfMap/Views/Admin/ResidentManager.xaml
+++ b/WpfMap/Views/Admin/ResidentManager.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:c="clr-namespace:WpfMap.Helpers.Validators"
         xmlns:local="clr-namespace:WpfMap"
@@ -36,16 +37,16 @@
             </Grid.ColumnDefinitions>
             <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="Add Resident" HorizontalContentAlignment="Center" FontSize="18" FontWeight="Bold" Margin="0,10"/>
             <Label Grid.Row="1" Grid.Column="0" Content="Name: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <TextBox Name="addResidentName" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0"/>
+            <TextBox Name="addResidentName" Text="{Binding AddResidentName, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0"/>
             <Label Grid.Row="3" Grid.Column="0" Content="Age: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <TextBox Name="addResidentAge" Grid.Row="3" Grid.Column="1" Margin="0,0,20,0"/>
+            <TextBox Name="addResidentAge" Text="{Binding AddResidentAge, UpdateSourceTrigger=PropertyChanged}" Grid.Row="3" Grid.Column="1" Margin="0,0,20,0"/>
             <Label Grid.Row="5" Grid.Column="0" Content="Gender: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <ComboBox Name="addResidentGender" Grid.Row="5" Grid.Column="1" Margin="0,0,20,0"/>
+            <ComboBox Name="addResidentGender" ItemsSource="{Binding Genders}" SelectedItem="{Binding AddResidentGender, UpdateSourceTrigger=PropertyChanged}" Grid.Row="5" Grid.Column="1" Margin="0,0,20,0"/>
             <Label Grid.Row="7" Grid.Column="0" Content="Phone: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <TextBox Name="addResidentPhone" Grid.Row="7" Grid.Column="1" Margin="0,0,20,0"/>
+            <TextBox Name="addResidentPhone" Text="{Binding AddResidentPhone, UpdateSourceTrigger=PropertyChanged}" Grid.Row="7" Grid.Column="1" Margin="0,0,20,0"/>
             <Label Grid.Row="9" Grid.Column="0" Content="Residence Time: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <TextBox Name="addResidentTime" Grid.Row="9" Grid.Column="1" Margin="0,0,20,0"/>
-            <Button Click="AddResident_Click" Grid.Row="11" Grid.Column="1" Content="Add" Margin="0,0,20,0"/>
+            <TextBox Name="addResidentTime" Text="{Binding AddResidentResidenceTime, UpdateSourceTrigger=PropertyChanged}" Grid.Row="9" Grid.Column="1" Margin="0,0,20,0"/>
+            <Button Command="{Binding AddResidenctCommand}" Grid.Row="11" Grid.Column="1" Content="Add" Margin="0,0,20,0"/>
         </Grid>
         <Grid Grid.Row="0" Grid.Column="1">
             <Grid.RowDefinitions>
@@ -72,19 +73,25 @@
             </Grid.ColumnDefinitions>
             <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="Edit/Delete Resident" HorizontalContentAlignment="Center" FontSize="18" FontWeight="Bold" Margin="0,10"/>
             <Label Grid.Row="1" Grid.Column="0" Content="Select Resident: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <TextBox Name="residentUID" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0"/>
+            <TextBox Name="residentUID" Text="{Binding ResidentUID, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="TextChanged">
+                        <i:InvokeCommandAction Command="{Binding SelectResidentCommand}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </TextBox>
             <Label Grid.Row="3" Grid.Column="0" Content="Name: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <TextBox Name="editResidentName" Grid.Row="3" Grid.Column="1" Margin="0,0,20,0"/>
+            <TextBox Name="editResidentName" Text="{Binding EditResidentName, UpdateSourceTrigger=PropertyChanged}" Grid.Row="3" Grid.Column="1" Margin="0,0,20,0"/>
             <Label Grid.Row="5" Grid.Column="0" Content="Age: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <TextBox Name="editResidentAge" Grid.Row="5" Grid.Column="1" Margin="0,0,20,0"/>
+            <TextBox Name="editResidentAge" Text="{Binding EditResidentAge, UpdateSourceTrigger=PropertyChanged}" Grid.Row="5" Grid.Column="1" Margin="0,0,20,0"/>
             <Label Grid.Row="7" Grid.Column="0" Content="Gender: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <ComboBox Name="editResidentGender" Grid.Row="7" Grid.Column="1" Margin="0,0,20,0"/>
+            <ComboBox Name="editResidentGender" ItemsSource="{Binding Genders}" SelectedItem="{Binding EditResidentGender, UpdateSourceTrigger=PropertyChanged}" Grid.Row="7" Grid.Column="1" Margin="0,0,20,0"/>
             <Label Grid.Row="9" Grid.Column="0" Content="Phone: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <TextBox Name="editResidentPhone" Grid.Row="9" Grid.Column="1" Margin="0,0,20,0"/>
+            <TextBox Name="editResidentPhone" Text="{Binding EditResidentPhone, UpdateSourceTrigger=PropertyChanged}" Grid.Row="9" Grid.Column="1" Margin="0,0,20,0"/>
             <Label Grid.Row="11" Grid.Column="0" Content="Residence Time: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <TextBox Name="editResidentTime" Grid.Row="11" Grid.Column="1" Margin="0,0,20,0"/>
-            <Button Click="EditResident_Click" Grid.Row="13" Grid.Column="1" Content="Edit" Margin="0,0,20,0"/>
-            <Button Click="DeleteResident_Click" Grid.Row="15" Grid.Column="1" Content="Delete" Margin="0,0,20,0"/>
+            <TextBox Name="editResidentTime" Text="{Binding EditResidentResidenceTime, UpdateSourceTrigger=PropertyChanged}" Grid.Row="11" Grid.Column="1" Margin="0,0,20,0"/>
+            <Button Command="{Binding EditResidentCommand}" Grid.Row="13" Grid.Column="1" Content="Edit" Margin="0,0,20,0"/>
+            <Button Command="{Binding DeleteResidentCommand}" Grid.Row="15" Grid.Column="1" Content="Delete" Margin="0,0,20,0"/>
         </Grid>
     </Grid>
 </Window>
