--- a/WpfMap/Views/Admin/RoomManager.xaml
+++ b/WpfMap/Views/Admin/RoomManager.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfMap"
         mc:Ignorable="d"
@@ -29,10 +30,10 @@
             </Grid.ColumnDefinitions>
             <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="Add Room" HorizontalContentAlignment="Center" FontSize="18" FontWeight="Bold" Margin="0,10"/>
             <Label Grid.Row="1" Grid.Column="0" Content="No: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <TextBox Name="addRoomNo" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0"/>
+            <TextBox Name="addRoomNo" Text="{Binding AddRoomNo, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0"/>
             <Label Grid.Row="3" Grid.Column="0" Content="Area: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <TextBox Name="addRoomArea" Grid.Row="3" Grid.Column="1" Margin="0,0,20,0"/>
-            <Button Click="AddRoom_Click" Grid.Row="5" Grid.Column="1" Content="Add" Margin="0,0,20,0"/>
+            <TextBox Name="addRoomArea" Text="{Binding AddRoomArea, UpdateSourceTrigger=PropertyChanged}" Grid.Row="3" Grid.Column="1" Margin="0,0,20,0"/>
+            <Button Command="{Binding AddRoomCommand}" Grid.Row="5" Grid.Column="1" Content="Add" Margin="0,0,20,0"/>
         </Grid>
         <Grid Grid.Row="0" Grid.Column="1">
             <Grid.RowDefinitions>
@@ -53,13 +54,19 @@
             </Grid.ColumnDefinitions>
             <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="Edit/Delete Room" HorizontalContentAlignment="Center" FontSize="18" FontWeight="Bold" Margin="0,10"/>
             <Label Grid.Row="1" Grid.Column="0" Content="Select Room: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <ComboBox Name="roomSelector" ItemsSource="{Binding Rooms}" DisplayMemberPath="No" SelectionChanged="RoomSelector_SelectionChanged" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0"/>
+            <ComboBox Name="roomSelector" ItemsSource="{Binding Rooms, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding SelectedRoom, UpdateSourceTrigger=PropertyChanged}" IsSynchronizedWithCurrentItem="True" DisplayMemberPath="No" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="SelectionChanged">
+                        <i:InvokeCommandAction Command="{Binding SelectRoomCommand}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </ComboBox>
             <Label Grid.Row="3" Grid.Column="0" Content="No: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <TextBox Name="editRoomNo" Grid.Row="3" Grid.Column="1" Margin="0,0,20,0"/>
+            <TextBox Name="editRoomNo" Text="{Binding EditRoomNo, UpdateSourceTrigger=PropertyChanged}" Grid.Row="3" Grid.Column="1" Margin="0,0,20,0"/>
             <Label Grid.Row="5" Grid.Column="0" Content="Area: " FontWeight="Medium" Margin="20,0,0,0"/>
-            <TextBox Name="editRoomArea" Grid.Row="5" Grid.Column="1" Margin="0,0,20,0"/>
-            <Button Click="EditRoom_Click" Grid.Row="7" Grid.Column="1" Content="Edit" Margin="0,0,20,0"/>
-            <Button Click="DeleteRoom_Click" Grid.Row="9" Grid.Column="1" Content="Delete" Margin="0,0,20,0"/>
+            <TextBox Name="editRoomArea" Text="{Binding EditRoomArea, UpdateSourceTrigger=PropertyChanged}" Grid.Row="5" Grid.Column="1" Margin="0,0,20,0"/>
+            <Button Command="{Binding EditRoomCommand}" Grid.Row="7" Grid.Column="1" Content="Edit" Margin="0,0,20,0"/>
+            <Button Command="{Binding DeleteRoomCommand}" Grid.Row="9" Grid.Column="1" Content="Delete" Margin="0,0,20,0"/>
         </Grid>
     </Grid>
 </Window>
