--- a/WpfMap/Views/User/CityPage.xaml
+++ b/WpfMap/Views/User/CityPage.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfMap"
         mc:Ignorable="d"
@@ -13,34 +14,38 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="250" />
             </Grid.ColumnDefinitions>
             <Label Content="Select Street" Grid.Row="0" Grid.Column="0" Margin="10, 5" Style="{StaticResource BoldLabelStyle}"/>
-            <TextBox Name="streetName" Text="Write Street Name" Grid.Row="1" Grid.Column="0" Margin="10, 5" Template="{StaticResource RoundedTextBoxTemplate}" Style="{StaticResource DefaultTextBoxStyle}"/>
-            <Button Click="SearchByName_Click" Content="Search" Grid.Row="2" Grid.Column="0" Margin="10, 5" Template="{StaticResource RoundedButtonTemplate}" Style="{StaticResource DefaultButtonStyle}"/>
-            <StackPanel Grid.Row="3" Grid.Column="0" Margin="10, 15">
+            <TextBox Name="streetName" Text="{Binding StreetName, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="0" Margin="10, 5" Template="{StaticResource RoundedTextBoxTemplate}" Style="{StaticResource DefaultTextBoxStyle}">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="TextChanged">
+                        <i:InvokeCommandAction Command="{Binding SearchByNameCommand}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </TextBox>
+            <StackPanel Grid.Row="2" Grid.Column="0" Margin="10, 15">
                 <Label Content="City Info" Style="{StaticResource InfoHeaderStyle}"/>
                 <ListView Background="White" Height="90">
-                    <Label Name="cityName" Content="{Binding Path=Name}" ContentStringFormat="Name: {0}" Style="{StaticResource InfoElementStyle}"/>
-                    <Label Name="cityPopulation" Content="{Binding Path=Habitants}" ContentStringFormat="Habitants: {0}" Style="{StaticResource InfoElementStyle}"/>
-                    <Label Name="cityArea" Content="{Binding Path=Area}" ContentStringFormat="Area: {0}" Style="{StaticResource InfoElementStyle}"/>
-                    <Label Name="streetsCount" Content="{Binding Path=Streets.Count}" ContentStringFormat="Streets count: {0}" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="cityName" Content="{Binding Path=City.Name}" ContentStringFormat="Name: {0}" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="cityPopulation" Content="{Binding Path=City.Habitants}" ContentStringFormat="Habitants: {0}" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="cityArea" Content="{Binding Path=City.Area}" ContentStringFormat="Area: {0} km^2" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="streetsCount" Content="{Binding Path=City.Streets.Count}" ContentStringFormat="Streets count: {0}" Style="{StaticResource InfoElementStyle}"/>
                 </ListView>
             </StackPanel>
-            <Image Source="D:/profiles/city.jpg" Grid.Row="4" Grid.Column="0" Width="230" Margin="10,10"/>
+            <Image Source="D:/profiles/city.jpg" Grid.Row="3" Grid.Column="0" Width="230" Margin="10,10"/>
         </Grid>
         <StackPanel>
-            <ListView x:Name="streets" Width="375" Height="350" VerticalAlignment="Top">
+            <ListView x:Name="streets" ItemsSource="{Binding Selection}" SelectedItem="{Binding SelectedStreet}" Width="375" Height="350" VerticalAlignment="Top">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Street" Width="385" DisplayMemberBinding="{Binding Path=Name}"/>
                     </GridView>
                 </ListView.View>
             </ListView>
-            <Button Content="Select" Click="FindStreet_Click" Margin="20" Template="{StaticResource RoundedButtonTemplate}" Style="{StaticResource DefaultButtonStyle}"/>
+            <Button Content="Select" Command="{Binding FindStreetCommand}" Margin="20" Template="{StaticResource RoundedButtonTemplate}" Style="{StaticResource DefaultButtonStyle}"/>
         </StackPanel>
     </DockPanel>
 </Window>
