--- a/WpfMap/Views/User/CountryPage.xaml
+++ b/WpfMap/Views/User/CountryPage.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfMap"
         mc:Ignorable="d"
@@ -13,35 +14,39 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="250" />
             </Grid.ColumnDefinitions>
             <Label Content="Select City" Grid.Row="0" Grid.Column="0" Margin="10, 5" Style="{StaticResource BoldLabelStyle}"/>
-            <TextBox Name="cityName" Text="Write City Name" Grid.Row="1" Grid.Column="0" Margin="10, 5" Template="{StaticResource RoundedTextBoxTemplate}" Style="{StaticResource DefaultTextBoxStyle}"/>
-            <Button Click="SearchByName_Click" Content="Search" Grid.Row="2" Grid.Column="0" Margin="10, 5" Template="{StaticResource RoundedButtonTemplate}" Style="{StaticResource DefaultButtonStyle}"/>
-            <StackPanel Grid.Row="3" Grid.Column="0" Margin="10, 15">
+            <TextBox Name="cityName" Text="{Binding CityName, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="0" Margin="10, 5" Template="{StaticResource RoundedTextBoxTemplate}" Style="{StaticResource DefaultTextBoxStyle}">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="TextChanged">
+                        <i:InvokeCommandAction Command="{Binding SearchByNameCommand}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </TextBox>
+            <StackPanel Grid.Row="2" Grid.Column="0" Margin="10, 15">
                 <Label Content="Country Info" Style="{StaticResource InfoHeaderStyle}"/>
                 <ListView Name="countryInfo" Background="White" Height="90">
-                    <Label Name="countryName" Content="{Binding Path=Name}" ContentStringFormat="Name: {0}" Style="{StaticResource InfoElementStyle}"/>
-                    <Label Name="countryCapital" Content="{Binding Path=Capital.Name}" ContentStringFormat="Capital: {0}" Style="{StaticResource InfoElementStyle}"/>
-                    <Label Name="countryPopulation" Content="{Binding Path=Population}" ContentStringFormat="Population: {0}" Style="{StaticResource InfoElementStyle}"/>
-                    <Label Name="countryArea" Content="{Binding Path=Area}" ContentStringFormat="Area: {0}" Style="{StaticResource InfoElementStyle}"/>
-                    <Label Name="citiesCount" Content="{Binding Path=Cities.Count}" ContentStringFormat="Cities count: {0}" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="countryName" Content="{Binding Path=Country.Name}" ContentStringFormat="Name: {0}" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="countryCapital" Content="{Binding Path=Country.Capital.Name}" ContentStringFormat="Capital: {0}" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="countryPopulation" Content="{Binding Path=Country.Population}" ContentStringFormat="Population: {0}" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="countryArea" Content="{Binding Path=Country.Area}" ContentStringFormat="Area: {0} km^2" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="citiesCount" Content="{Binding Path=Country.Cities.Count}" ContentStringFormat="Cities count: {0}" Style="{StaticResource InfoElementStyle}"/>
                 </ListView>
             </StackPanel>
-            <Image Source="D:/profiles/country.jpg" Grid.Row="4" Grid.Column="0" Width="200" Margin="10,10"/>
+            <Image Source="D:/profiles/country.jpg" Grid.Row="3" Grid.Column="0" Width="200" Margin="10,10"/>
         </Grid>
         <StackPanel>
-            <ListView x:Name="cities" Width="375" Height="350" VerticalAlignment="Top">
+            <ListView x:Name="cities" ItemsSource="{Binding Selection}" SelectedItem="{Binding SelectedCity}" Width="375" Height="350" VerticalAlignment="Top">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="City" Width="385" DisplayMemberBinding="{Binding Path=Name}"/>
                     </GridView>
                 </ListView.View>
             </ListView>
-            <Button Content="Select" Click="FindCity_Click" Margin="20" Template="{StaticResource RoundedButtonTemplate}" Style="{StaticResource DefaultButtonStyle}"/>
+            <Button Content="Select" Command="{Binding FindCityCommand}" Margin="20" Template="{StaticResource RoundedButtonTemplate}" Style="{StaticResource DefaultButtonStyle}"/>
         </StackPanel>
     </DockPanel>
 </Window>
