--- a/WpfMap/Views/User/HousePage.xaml
+++ b/WpfMap/Views/User/HousePage.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfMap"
         mc:Ignorable="d"
@@ -13,33 +14,37 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="250" />
             </Grid.ColumnDefinitions>
             <Label Content="Select Room" Grid.Row="0" Grid.Column="0" Margin="10, 5" Style="{StaticResource BoldLabelStyle}"/>
-            <TextBox Name="roomNumber" Text="Write Room Number" Grid.Row="1" Grid.Column="0" Margin="10, 5" Template="{StaticResource RoundedTextBoxTemplate}" Style="{StaticResource DefaultTextBoxStyle}"/>
-            <Button Click="SearchByNo_Click" Content="Search" Grid.Row="2" Grid.Column="0" Margin="10, 5" Template="{StaticResource RoundedButtonTemplate}" Style="{StaticResource DefaultButtonStyle}"/>
-            <StackPanel Grid.Row="3" Grid.Column="0" Margin="10, 15">
+            <TextBox Name="roomNumber" Text="{Binding RoomNumber, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="0" Margin="10, 5" Template="{StaticResource RoundedTextBoxTemplate}" Style="{StaticResource DefaultTextBoxStyle}">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="TextChanged">
+                        <i:InvokeCommandAction Command="{Binding SearchByNumberCommand}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </TextBox>
+            <StackPanel Grid.Row="2" Grid.Column="0" Margin="10, 15">
                 <Label Content="House Info" Style="{StaticResource InfoHeaderStyle}"/>
                 <ListView Background="White" Height="90">
-                    <Label Name="houseAddress" Content="{Binding Path=Address}" ContentStringFormat="Address: {0}" Style="{StaticResource InfoElementStyle}"/>
-                    <Label Name="housePopulation" Content="{Binding Path=Habitants}" ContentStringFormat="Habitants: {0}" Style="{StaticResource InfoElementStyle}"/>
-                    <Label Name="roomsCount" Content="{Binding Path=Rooms.Count}" ContentStringFormat="Rooms count: {0}" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="houseAddress" Content="{Binding Path=House.Address}" ContentStringFormat="Address: {0}" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="housePopulation" Content="{Binding Path=House.Habitants}" ContentStringFormat="Habitants: {0}" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="roomsCount" Content="{Binding Path=House.Rooms.Count}" ContentStringFormat="Rooms count: {0}" Style="{StaticResource InfoElementStyle}"/>
                 </ListView>
             </StackPanel>
-            <Image Source="D:/profiles/house.jpg" Grid.Row="4" Grid.Column="0" Width="230" Margin="10,10"/>
+            <Image Source="D:/profiles/house.jpg" Grid.Row="3" Grid.Column="0" Width="230" Margin="10,10"/>
         </Grid>
         <StackPanel>
-            <ListView x:Name="rooms" Width="375" Height="350" VerticalAlignment="Top">
+            <ListView x:Name="rooms" ItemsSource="{Binding Selection}" SelectedItem="{Binding SelectedRoom}" Width="375" Height="350" VerticalAlignment="Top">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Room Number" Width="385" DisplayMemberBinding="{Binding Path=No}"/>
                     </GridView>
                 </ListView.View>
             </ListView>
-            <Button Content="Select" Click="FindRoom_Click" Margin="20" Template="{StaticResource RoundedButtonTemplate}" Style="{StaticResource DefaultButtonStyle}"/>
+            <Button Content="Select" Command="{Binding FindRoomCommand}" Margin="20" Template="{StaticResource RoundedButtonTemplate}" Style="{StaticResource DefaultButtonStyle}"/>
         </StackPanel>
     </DockPanel>
 </Window>
