--- a/WpfMap/Views/User/RoomPage.xaml
+++ b/WpfMap/Views/User/RoomPage.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfMap"
         mc:Ignorable="d"
@@ -13,34 +14,38 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="250" />
             </Grid.ColumnDefinitions>
             <Label Content="Select Resident" Grid.Row="0" Grid.Column="0" Margin="10, 5" Style="{StaticResource BoldLabelStyle}"/>
-            <TextBox Name="residentName" Text="Write Resident Name" Grid.Row="1" Grid.Column="0" Margin="10, 5" Template="{StaticResource RoundedTextBoxTemplate}" Style="{StaticResource DefaultTextBoxStyle}"/>
-            <Button Click="SearchByName_Click" Content="Search" Grid.Row="2" Grid.Column="0" Margin="10, 5" Template="{StaticResource RoundedButtonTemplate}" Style="{StaticResource DefaultButtonStyle}"/>
-            <StackPanel Grid.Row="3" Grid.Column="0" Margin="10, 15">
+            <TextBox Name="residentName" Text="{Binding ResidentName, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="0" Margin="10, 5" Template="{StaticResource RoundedTextBoxTemplate}" Style="{StaticResource DefaultTextBoxStyle}">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="TextChanged">
+                        <i:InvokeCommandAction Command="{Binding SearchByNameCommand}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </TextBox>
+            <StackPanel Grid.Row="2" Grid.Column="0" Margin="10, 15">
                 <Label Content="Room Info" Style="{StaticResource InfoHeaderStyle}"/>
                 <ListView Background="White" Height="90">
-                    <Label Name="roomNumber" Content="{Binding Path=No}" ContentStringFormat="No: {0}" Style="{StaticResource InfoElementStyle}"/>
-                    <Label Name="roomUID" Content="{Binding Path=UID}" ContentStringFormat="UID: {0}" Style="{StaticResource InfoElementStyle}"/>
-                    <Label Name="roomArea" Content="{Binding Path=Area}" ContentStringFormat="Area: {0}" Style="{StaticResource InfoElementStyle}"/>
-                    <Label Name="residentsCount" Content="{Binding Path=Residents.Count}" ContentStringFormat="Residents count: {0}" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="roomNumber" Content="{Binding Path=Room.No}" ContentStringFormat="No: {0}" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="roomUID" Content="{Binding Path=Room.UID}" ContentStringFormat="UID: {0}" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="roomArea" Content="{Binding Path=Room.Area}" ContentStringFormat="Area: {0}" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="residentsCount" Content="{Binding Path=Room.Residents.Count}" ContentStringFormat="Residents count: {0}" Style="{StaticResource InfoElementStyle}"/>
                 </ListView>
             </StackPanel>
-            <Image Source="D:/profiles/room.jpg" Grid.Row="4" Grid.Column="0" Width="230" Margin="10,10"/>
+            <Image Source="D:/profiles/room.jpg" Grid.Row="3" Grid.Column="0" Width="230" Margin="10,10"/>
         </Grid>
         <StackPanel>
-            <ListView x:Name="residents" Width="375" Height="350" VerticalAlignment="Top">
+            <ListView x:Name="residents" ItemsSource="{Binding Selection}" SelectedItem="{Binding SelectedResident}" Width="375" Height="350" VerticalAlignment="Top">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Room Resident" Width="385" DisplayMemberBinding="{Binding Path=Name}"/>
                     </GridView>
                 </ListView.View>
             </ListView>
-            <Button Content="Select" Click="FindResident_Click" Margin="20" Template="{StaticResource RoundedButtonTemplate}" Style="{StaticResource DefaultButtonStyle}"/>
+            <Button Content="Select" Command="{Binding FindResidentCommand}" Margin="20" Template="{StaticResource RoundedButtonTemplate}" Style="{StaticResource DefaultButtonStyle}"/>
         </StackPanel>
     </DockPanel>
 </Window>
