--- a/WpfMap/Views/User/StreetPage.xaml
+++ b/WpfMap/Views/User/StreetPage.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfMap"
         mc:Ignorable="d"
@@ -13,33 +14,37 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="250" />
             </Grid.ColumnDefinitions>
             <Label Content="Select House" Grid.Row="0" Grid.Column="0" Margin="10, 5" Style="{StaticResource BoldLabelStyle}"/>
-            <TextBox Name="houseAddress" Text="Write House Address" Grid.Row="1" Grid.Column="0" Margin="10, 5" Template="{StaticResource RoundedTextBoxTemplate}" Style="{StaticResource DefaultTextBoxStyle}"/>
-            <Button Click="SearchByAddress_Click" Content="Search" Grid.Row="2" Grid.Column="0" Margin="10, 5" Template="{StaticResource RoundedButtonTemplate}" Style="{StaticResource DefaultButtonStyle}"/>
-            <StackPanel Grid.Row="3" Grid.Column="0" Margin="10, 15">
+            <TextBox Name="houseAddress" Text="{Binding HouseAddress, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="0" Margin="10, 5" Template="{StaticResource RoundedTextBoxTemplate}" Style="{StaticResource DefaultTextBoxStyle}">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="TextChanged">
+                        <i:InvokeCommandAction Command="{Binding SearchByAddressCommand}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </TextBox>
+            <StackPanel Grid.Row="2" Grid.Column="0" Margin="10, 15">
                 <Label Content="Street Info" Style="{StaticResource InfoHeaderStyle}"/>
                 <ListView Background="White" Height="90">
-                    <Label Name="streetName" Content="{Binding Path=Name}" ContentStringFormat="Name: {0}" Style="{StaticResource InfoElementStyle}"/>
-                    <Label Name="streetPopulation" Content="{Binding Path=Habitants}" ContentStringFormat="Habitants: {0}" Style="{StaticResource InfoElementStyle}"/>
-                    <Label Name="housesCount" Content="{Binding Path=Houses.Count}" ContentStringFormat="Houses count: {0}" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="streetName" Content="{Binding Path=Street.Name}" ContentStringFormat="Name: {0}" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="streetPopulation" Content="{Binding Path=Street.Habitants}" ContentStringFormat="Habitants: {0}" Style="{StaticResource InfoElementStyle}"/>
+                    <Label Name="housesCount" Content="{Binding Path=Street.Houses.Count}" ContentStringFormat="Houses count: {0}" Style="{StaticResource InfoElementStyle}"/>
                 </ListView>
             </StackPanel>
-            <Image Source="D:/profiles/street.jpg" Grid.Row="4" Grid.Column="0" Width="230" Margin="10,10"/>
+            <Image Source="D:/profiles/street.jpg" Grid.Row="3" Grid.Column="0" Width="230" Margin="10,10"/>
         </Grid>
         <StackPanel>
-            <ListView x:Name="houses" Width="375" Height="350" VerticalAlignment="Top">
+            <ListView x:Name="houses" ItemsSource="{Binding Selection}" SelectedItem="{Binding SelectedHouse}" Width="375" Height="350" VerticalAlignment="Top">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="House Address" Width="385" DisplayMemberBinding="{Binding Path=Address}"/>
                     </GridView>
                 </ListView.View>
             </ListView>
-            <Button Content="Select" Click="FindHouse_Click" Margin="20" Template="{StaticResource RoundedButtonTemplate}" Style="{StaticResource DefaultButtonStyle}"/>
+            <Button Content="Select" Command="{Binding FindHouseCommand}" Margin="20" Template="{StaticResource RoundedButtonTemplate}" Style="{StaticResource DefaultButtonStyle}"/>
         </StackPanel>
     </DockPanel>
 </Window>
