--- a/WpfMap/Resources/Styles.xaml
+++ b/WpfMap/Resources/Styles.xaml
@@ -1,6 +1,27 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:WpfMap">
+    <Style x:Key="AnimatedWindow" TargetType="Window">
+        <Style.Triggers>
+            <EventTrigger RoutedEvent="FrameworkElement.Loaded">
+                <EventTrigger.Actions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <ColorAnimationUsingKeyFrames
+                                Storyboard.TargetProperty="Background.Color" 
+                                Duration="0:0:9" AutoReverse="True" RepeatBehavior="Forever">
+                                <ColorAnimationUsingKeyFrames.KeyFrames>
+                                    <LinearColorKeyFrame KeyTime="0:0:0" Value="LightBlue" />
+                                    <LinearColorKeyFrame KeyTime="0:0:3" Value="LightGreen" />
+                                    <LinearColorKeyFrame KeyTime="0:0:6" Value="Yellow" />
+                                </ColorAnimationUsingKeyFrames.KeyFrames>
+                            </ColorAnimationUsingKeyFrames>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger.Actions>
+            </EventTrigger>
+        </Style.Triggers>
+    </Style>
     <Style x:Key="DefaultButtonStyle" TargetType="Button">
         <Setter Property="FontFamily" Value="Roboto"/>
         <Setter Property="BorderBrush" Value="LightBlue"/>
